[gd_scene load_steps=21 format=2]

[ext_resource path="res://UI/statsScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/UI/titleBG2test2.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/UI/button.png" type="Texture" id=3]
[ext_resource path="res://Themes/ui16real.tres" type="Theme" id=4]
[ext_resource path="res://Themes/UI.tres" type="Theme" id=5]
[ext_resource path="res://assets/sprites/UI/targetOutline.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player/target.png" type="Texture" id=7]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Curve" id=12]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 360 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.421788, 0.815642 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 1, 1, 1, 1, 0.972656, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[node name="statsScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 4, 4 )

[node name="TextureRect" type="TextureRect" parent="Node2D"]
margin_right = 160.0
margin_bottom = 120.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 54.0
margin_top = 38.0
margin_right = 586.0
margin_bottom = 267.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -5
text = "A day will come where you'll find 
All your stats here. 

Full run time, speed run time, bullets used, 
targets shots, global accuracy, and else.

Tell me in the itch comments what would be 
important stats to you."

[node name="changeName" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 566.0
margin_top = 332.0
margin_right = 608.0
margin_bottom = 374.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
align = 2

[node name="Label" type="Label" parent="changeName"]
margin_left = -212.0
margin_top = 6.0
margin_right = -4.0
margin_bottom = 38.0
text = "Change Name"
align = 2

[node name="Sprite" type="Sprite" parent="changeName"]
visible = false
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="changeName"]
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="changeName"]
margin_left = 37.0
margin_top = 19.0
margin_right = 74.0
margin_bottom = 26.0
color = Color( 0.309804, 0.262745, 0.180392, 1 )

[node name="backMain" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 566.0
margin_top = 384.0
margin_right = 608.0
margin_bottom = 426.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
align = 2

[node name="Label" type="Label" parent="backMain"]
margin_left = -212.0
margin_top = 6.0
margin_right = -4.0
margin_bottom = 38.0
text = "Main menu"
align = 2

[node name="Sprite" type="Sprite" parent="backMain"]
visible = false
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="backMain"]
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="backMain"]
margin_left = 37.0
margin_top = 19.0
margin_right = 74.0
margin_bottom = 26.0
color = Color( 0.309804, 0.262745, 0.180392, 1 )

[node name="resetSave" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 566.0
margin_top = 283.0
margin_right = 608.0
margin_bottom = 325.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
align = 2

[node name="Label" type="Label" parent="resetSave"]
margin_left = -119.0
margin_top = 6.0
margin_right = -3.0
margin_bottom = 38.0
text = "Reset Save"
align = 2

[node name="Sprite" type="Sprite" parent="resetSave"]
visible = false
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="resetSave"]
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="resetSave"]
margin_left = 37.0
margin_top = 19.0
margin_right = 74.0
margin_bottom = 26.0
color = Color( 0.309804, 0.262745, 0.180392, 1 )

[node name="resetParticles" type="CPUParticles2D" parent="."]
position = Vector2( 315, 297 )
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 273.4
initial_velocity_random = 0.25
angle_curve = SubResource( 12 )
scale_amount = 16.0
scale_amount_random = 0.5
scale_amount_curve = SubResource( 13 )
color_ramp = SubResource( 14 )

[node name="AreyouSure" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect3" type="ColorRect" parent="AreyouSure"]
margin_right = 640.0
margin_bottom = 480.0
color = Color( 0, 0, 0, 0.784314 )

[node name="ColorRect" type="ColorRect" parent="AreyouSure"]
margin_left = 137.0
margin_top = 92.0
margin_right = 503.0
margin_bottom = 205.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="AreyouSure"]
margin_left = 137.0
margin_top = 209.0
margin_right = 503.0
margin_bottom = 261.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="AreyouSure"]
position = Vector2( 318, 305 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="YES" type="Button" parent="AreyouSure"]
margin_left = 220.0
margin_top = 283.0
margin_right = 416.0
margin_bottom = 315.0
theme = ExtResource( 5 )
custom_colors/font_color_hover = Color( 0.909804, 0.717647, 0.235294, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "YES"
flat = true

[node name="Sprite2" type="Sprite" parent="AreyouSure"]
position = Vector2( 318, 359 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="NO" type="Button" parent="AreyouSure"]
margin_left = 223.0
margin_top = 337.0
margin_right = 415.0
margin_bottom = 369.0
theme = ExtResource( 5 )
custom_colors/font_color_hover = Color( 0.909804, 0.717647, 0.235294, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "OH MY NO!"
flat = true

[node name="Label" type="Label" parent="AreyouSure"]
margin_left = 56.0
margin_top = 113.0
margin_right = 574.0
margin_bottom = 180.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Are you sure ?
All datas will be removed"
align = 1

[node name="Label2" type="Label" parent="AreyouSure"]
margin_left = 56.0
margin_top = 219.0
margin_right = 574.0
margin_bottom = 286.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "your name and the online leaderboard will stay though
So yeah not aaaaall datas..."
align = 1

[connection signal="mouse_entered" from="changeName" to="." method="_on_changeName_mouse_entered"]
[connection signal="mouse_exited" from="changeName" to="." method="_on_changeName_mouse_exited"]
[connection signal="pressed" from="changeName" to="." method="_on_changeName_pressed"]
[connection signal="mouse_entered" from="backMain" to="." method="_on_backMain_mouse_entered"]
[connection signal="mouse_exited" from="backMain" to="." method="_on_backMain_mouse_exited"]
[connection signal="pressed" from="backMain" to="." method="_on_backMain_pressed"]
[connection signal="mouse_entered" from="resetSave" to="." method="_on_resetSave_mouse_entered"]
[connection signal="mouse_exited" from="resetSave" to="." method="_on_resetSave_mouse_exited"]
[connection signal="pressed" from="resetSave" to="." method="_on_resetSave_pressed"]
[connection signal="pressed" from="AreyouSure/YES" to="." method="_on_YES_pressed"]
[connection signal="pressed" from="AreyouSure/NO" to="." method="_on_NO_pressed"]
